fix flex cut off

--- a/1. Sign Up/style.css
+++ b/1. Sign Up/style.css
@@ -2,7 +2,7 @@
 
 body {
     background-color: #1B1B43;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
